edit up to page 81

--- a/Focus.tex
+++ b/Focus.tex
@@ -2,7 +2,7 @@
 \input{FocusIntro.tex}
 
 \cleartorightpage
-\HugeQuote{CYM}{Call your mom}{}{}{}
+\HugeQuote{CYM}{Call your mom.}{}{}{}
  
 \cleartoleftpage
 
@@ -20,7 +20,7 @@
 \HugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
 
 \cleartorightpage
-\HugeQuote{PL_DST}{Don't spend time with people you don't like.}{}{Prue Leith}{}{}
+\HugeQuote{PL_DST}{Don't spend time on people you don't like.}{}{Prue Leith}{}{}
 \cleartoleftpage
 
 \HugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{}{}
@@ -84,13 +84,13 @@ reject the other.}{Lao Tzu}{}{}
 
 \cleartoleftpage
 
-\hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
+\hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people who have nothing better to do.}{Oscar Wilde}{}{}
 
-\hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
+\hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bob Dylan}{BJ_DWYL}{}
 
 \cleartorightpage
 \HugeQuote{PL}{Parkinson's Law}{:\newline
-A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
+A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{Cyril Northcote Parkinson}{C_ABILITY}{\href{http://bit.ly/1Massqh}{http://bit.ly/1Massqh}}
 
 \cleartoleftpage
 
@@ -111,7 +111,7 @@ Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 \cleartorightpage
 
-\HugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
+\HugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you say is important today.}{Ryan Holiday}{}{}
 
 \cleartoleftpage
 
