--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -3,12 +3,12 @@
 
 As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (\S \ref{ST_UTU}) and what price we'll have to pay. The sun will still hide behind the clouds on our day at the beach, the car behind will still drive too close no matter how much we hope otherwise. Better to work on things we can control instead.  %effort vs impact
 
-When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (\S \ref{PL_DST}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (\S \ref{MA_SMALL}), we spend hours mindlessly scrolling around sensationalist journalism when we could be reading an immersive novel (\S \ref{TP_BOOK}) or working on our beloved hobby (\S \ref{BB_PRACTICE}). 
+When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (\S \ref{PL_DST}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (\S \ref{MA_SMALL}), we spend hours mindlessly scrolling around sensationalist journalism when we could be reading a beautiful immersive novel (\S \ref{TP_BOOK}) or working on our beloved hobby (\S \ref{BB_PRACTICE}). 
 
-Epictetus (\S \ref{EP_FOOL}) reminds us that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing terrible will happen if we stop using social media. We can be confident that life will carry on if we ignore \say{the mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}}. There are so many ways to spend our time, we need to be careful to choose well and that takes effort. Asking ourselves whether what we're doing right now is truly important to us (\S \ref{MA_DL}) is a vital habit to develop.
+Epictetus (\S \ref{EP_FOOL}) recommends that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing terrible will happen if we stop using social media. We can be confident that life will carry on if we ignore \say{the mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}}. There are so many ways to spend our time, we need to be careful to choose well and that takes effort. Asking ourselves whether what we're doing right now is truly important to us (\S \ref{MA_DL}) is a vital habit to develop.
 
-Maybe we should call someone who's important to us and focus soley on that for starters. 
+Maybe we should call someone who's important to us and focus just on that for starters. Let's take 15 minutes. 
 
-Let's take 15 minutes. The advice and guidance on the next few pages will still be here when we get back. 
+The advice and guidance on the next few pages will still be here when we get back. 
 
 }
