--- a/Learning.tex
+++ b/Learning.tex
@@ -1,7 +1,7 @@
 \input{LearningIntro.tex}
 
-
-%\smallQuote{BH_FP}{The taking of flash photos and the use of recording devices of any kind including; pens, pencils, eyes and ears, is strictly encouraged.}{Bob Holman}{}{}
+\cleartorightpage
+\HugeQuote{BH_FP}{The taking of flash photos}{ and the use of recording devices of any kind including; pens, pencils, eyes and ears, is strictly encouraged.}{Bob Holman}{}{}
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9,29 +9,31 @@
 \smallQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive}{Robert Greene}{}
 \smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
 \smallQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{Benjamin Franklin}{}
-\smallQuote{RH_LIVE}{Learn as if you were going to live but live as if you were going to die tomorrow\llink{http://bit.ly/2fIQFOc}.}{Edmund Rich}{}
+\smallQuote{RH_LIVE}{Study as if you were going to live forever but live as if you were going to die tomorrow.}{Edmund Rich}{}
 %Possibly much earlier though.
+%\llink{http://bit.ly/2fIQFOc
 %https://books.google.co.uk/books?id=95mdmyMC8SsC&dq=%22live+as+if+you+were+to+die+to-morrow%22&pg=PA147&redir_esc=y#v=onepage&q=%22live%20as%20if%20you%20were%20to%20die%20to-morrow%22&f=false
 
-\cleartorightpage
+\cleartoleftpage
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
-
-\smallQuote{HST_REACT}{Every reaction is a learning process; every significant experience alters your perspective. }{Hunter S. Thompson}{}
+\cleartorightpage
+\HugeQuote{HST_REACT}{Every reaction is a learning process}{; every significant experience alters your perspective.}{Hunter S. Thompson}{}{}
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
-\hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
-% \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
+% \hugeQuote{H_ART}{The art lies in concealing the art.}{}{Horace}{}{} 
+% \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful.}{Michelangelo}{}{}
+% % \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
+
+\hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 
 \hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
-\emph{On purpose}}{G. K. Nielson}{}{}
+\emph{On purpose.}}{G. K. Nielson}{}{}
 
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 
-\hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
+\HugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
