--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -2,16 +2,16 @@
 { \small
 We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the progress we've made towards our aims.
 
-On this journey knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the way we make the journey is at least as important as the desination.
+On this journey knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. We should understand that the way we make the journey is much more important than our desination.
 
-To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (\S \ref{MA_GRIEF}) and we're only going to waste time and do everything badly if we act or speak angrily (\S \ref{BG_ANGER}).
+To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (\S \ref{MA_GRIEF}) and we're only going to waste time and do everything badly if we act or speak when we're angry or hungry or \ldots (\S \ref{BG_ANGER}).
 
 We know that we are expected to play the game with limited (or even inaccurate) information but we should take time to think over what we do know before committing to a course of action. We also need to be open to changing our plans as more facts are revealed (\S \ref{MA_CHANGE}).  
 
-Acting in good faith after a consideration of the facts and taking counsel where we can will mean that even when the landscape changes and the actions we took weren't right in retrospect we can still stand by them in the light of what we knew at the time(\S \ref{NT_FAIL}). But dive in and we can blunder from one poorly understood situation to the next and end up in an even weaker position than we started in. 
+Acting in good faith after a consideration of the facts (as they appear) and taking counsel where we can will mean that even when the landscape changes and the actions we took weren't right in retrospect we can still stand by them with a clear conscience (\S \ref{NT_FAIL}). But quickly dive in and we can blunder from one poorly understood situation to the next and end up in an even weaker position than we started in. 
 
-It's a lot of effort to be patient enough to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
+It takes a lot of effort to be patient enough to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
 
-With a little help we can be sure we're up to it.
+But with a little help we can be sure we're up to it.
 }
 
