--- a/Action.tex
+++ b/Action.tex
@@ -23,7 +23,7 @@
 %focus on what you can do 
 
 
-\HugeQuote{MA_CREDIT}{Do what nature demands}{. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
+\HugeQuote{MA_CREDIT}{Do what nature demands}{. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.\newline
 And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress.}{Marcus Aurelius}{}
 
 \HugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit.}{Harry S Truman}{}{}
