--- a/Patience.tex
+++ b/Patience.tex
@@ -12,14 +12,15 @@
 Am I in charge of this situation or is this situation in charge of me?}{}{Anthony De Mello}{}
 
 \hugeQuote{ST_WAIT}{Do not make war}{ unless victory may be gained;\newline
-If there is a prospect of vicory move; \newline
-If there is no prospect of victory do not move.}{Sun Tzu}{}{}
+If there is a prospect of victory move; \newline
+Otherwise, do not.}{Sun Tzu}{}{}
 
 \hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{}{}
 
-\hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall.}{Robert Greene}{}{}
+\hugeQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it}{.\newline
+Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 
-\hugeQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it}{. Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
+\hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall.}{Robert Greene}{}{}
 
 %judgement
 %%%%%%%%%%%%%%%%%%%%%%%%
@@ -28,20 +29,22 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
 
-\hugeQuote{E_DLTF}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let me put you to the test.}}{Epictetus}{}{}
+\cleartorightpage
+\HugeQuote{E_DLTF}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let me put you to the test.}}{Epictetus}{}{}
 
 
 % think before you speak
 %%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\hugeQuote{RG_TALK}{Once the words are out}{, you cannot take them back. Keep them under control.}{Robert Greene}{}{}
-\hugeQuote{RH_TALK}{The best advice I ever got}{ was \say{shut up}}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
-\hugeQuote{LT_SL}{Those who know don't talk. Those who talk don't know.}{Lao Tzu}{}{}
-%\smallQuote{LT_SL}{Spare words: nature's way. Violent winds do not blow all morning.}{Lao Tzu}{}
+\hugeQuote{RG_TALK}{Once the words are out}{, you cannot take them back. }{Robert Greene}{}{}
+\hugeQuote{RH_TALK}{The best advice I ever got}{ was \say{shut up}}{Ryan Holiday}{}{\href{http://tcat.tc/1IwHzGd}{http://tcat.tc/1IwHzGd}}
+% \smallQuote{LT_SL}{Those who know don't talk.\newline
+% Those who talk don't know.}{Lao Tzu}{}{}
+\hugeQuote{LT_SL}{Spare words}{: nature's way. Violent winds do not blow all morning.}{Lao Tzu}{}
 
 \cleartorightpage
-\HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
+\HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools because they have to say something.}{Plato}{}{}
 
 
 %todo unsure, maybe generosity
@@ -56,15 +59,14 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
-\hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gra\c{c}ian}{}{}
+% \hugeQuote{LT_ANGER}{The best fighter is never angry.}{}{Lao Tzu}{}
+\smallQuote{LT_BF}{The good soldier is not hot-tempered.}{Lao Tzu}{}
 
-% \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
+\smallQuote{BG_ANGER}{Never do anything when you are in a temper, for you will do everything wrong.}{Baltazar Gra\c{c}ian}{}
 
-\hugeQuote{LT_ANGER}{The best fighter is never angry.}{}{Lao Tzu}{}
-%\smallQuote{LT_BF}{The good soldier is not hot-tempered.}{Lao Tzu}{}
+\smallQuote{RG_ANGER}{Anger and emotion are strategically counterproductive. You must always stay calm and objective}{Robert Greene}{}
 
-
-\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
+\smallQuote{MA_GRIEF}{How much more damage grief and anger do than the things that caused them.}{Marcus Aurelius}{}
 
 \cleartorightpage
 \HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
