edit up to ch. 8

--- a/Humility.tex
+++ b/Humility.tex
@@ -14,9 +14,12 @@
 \HugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box.}{Italian Proverb}{}{}
 
 %%% help
+\cleartoleftpage
+\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
+
 \cleartorightpage
 \hugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
-\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
+
 
 
 %%%fate
@@ -34,6 +37,8 @@
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
 \hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you.}{Mike Tyson}{}{}
+
+\cleartorightpage
 \hugeQuote{MC_VISIT}{The moment you think you are successful}{, failure will be there for you.}{Maurizio Cattelan}{}{}
 
 \hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference.}{Marcus Aurelius}{}{}
@@ -46,7 +51,7 @@
 \smallQuote{C_BOAST}{A superior man is modest in his speech but exceeds in his actions.}{Confucious}{}{}
 
 %TODO review
-\smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it.}{George Bernard Shaw}{MA_NOW2}{}
+\smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it.}{George Bernard Shaw}{}{}% todo check link MA_NOW2
 
 \cleartorightpage
 \hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or not;}{\newline
