--- a/Learning.tex
+++ b/Learning.tex
@@ -6,10 +6,10 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\smallQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive}{Robert Greene}{}
-\smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
-\smallQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{Benjamin Franklin}{}
-\smallQuote{RH_LIVE}{Study as if you were going to live forever but live as if you were going to die tomorrow.}{Edmund Rich}{}
+\hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive.}{}{Robert Greene}{}{}
+\hugeQuote{TP_BOOK}{If I read a book}{and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{}{}
+\hugeQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{}{Benjamin Franklin}{}{}
+\hugeQuote{RH_LIVE}{Study as if you were going to live forever}{ but live as if you were going to die tomorrow.}{Edmund Rich}{}{}
 %Possibly much earlier though.
 %\llink{http://bit.ly/2fIQFOc
 %https://books.google.co.uk/books?id=95mdmyMC8SsC&dq=%22live+as+if+you+were+to+die+to-morrow%22&pg=PA147&redir_esc=y#v=onepage&q=%22live%20as%20if%20you%20were%20to%20die%20to-morrow%22&f=false
@@ -27,8 +27,7 @@
 
 \hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 
-\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
-\emph{On purpose.}}{G. K. Nielson}{}{}
+\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \emph{On purpose.}}{G. K. Nielson}{}{}
 
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -40,8 +39,10 @@
 \HugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
 \cleartorightpage
 
-\HugeQuote{RH_ML}{More listening, more learning}{\newline
-Fewer interruptions, fewer conclusions.
+\HugeQuote{RH_ML}{More listening}{,\newline 
+more learning\newline
+Fewer interruptions,\newline
+fewer conclusions.
 }{Ryan Holiday}{MA_CHANGE}{} % maybe P_TALK
 
 %todo possibly humility 
