--- a/Resilience.tex
+++ b/Resilience.tex
@@ -2,7 +2,8 @@
 
 \cleartorightpage
 
-\HugeQuote{JP_STAND}{Fall seven times}{, stand eight}{Japanese Proverb}{MA_PERSIST2}{}
+\HugeQuote{JP_STAND}{Fall seven times}{,\newline
+stand eight.}{Japanese Proverb}{MA_PERSIST2}{}
 
 %% calm minds
 \cleartoleftpage
@@ -19,7 +20,7 @@
 %
 %%%%%%%%%%%%%
 %TODO: position ? 
-\hugeQuote{MA_CONTROL2}{We control our own actions}{ and are responsible for them. If we act wrongly we have done serious harm to ourselves.}{Marcus Aurelius}{}{}
+\hugeQuote{MA_CONTROL2}{We control our own actions}{ and are responsible for them. If we act badly we have harmed ourselves.}{Marcus Aurelius}{}{}
 
 \hugeQuote{MA_DWH}{Does what happened}{ stop you from acting with justice, generosity, self control, sanity, prudence, honesty and straight forwardness?}{Marcus Aurelius}{}{}
 
@@ -34,19 +35,21 @@
 
 \smallQuote{DLP_DNA}{You don't need their approval.}{Danielle La Porte}{}{}
 
+\smallQuote{MA_MIND1}{What is outside my mind means nothing to it.}{Marcus Aurelius}{}{}
+
 %\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
 %Self-indulgence: tying it to the things that happen to you.\newline
 %Sanity: tying it to your own actions.}{Marcus Aurelius}{ST_UTU}{}
 
 % todo location ? 
-\smallQuote{MA_STR}{Straight not straightened.}{Marcus Aurelius}{}{}
+%\smallQuote{MA_STR}{Straight not straightened.}{Marcus Aurelius}{}{}
 
-\cleartorightpage
+%\cleartorightpage
 
-\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it.}{Marcus Aurelius}{}{}
+
 
 % \hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure.}{Marcus Aurelius}{}{}
-\hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{ not places affording views over the sea.}{Horace}{}{}
+%\hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{ not places affording views over the sea.}{Horace}{}{}
 
 \cleartorightpage
 \HugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
@@ -101,12 +104,12 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 
 \cleartoleftpage
 \hugeQuote{S_ENDURE}{Not to give in}{to adversity.\newline
-Not to trust prosperity.\newline \newline
+Not to trust prosperity.\newline 
 And always take note of Fortune's habit of behaving exactly as she pleases.}{Seneca}{}{}
 
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
-\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots\newline in a thunderstorm.}{Robert Louis Stephenson}{}{}
+\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock in a thunderstorm.}{Robert Louis Stephenson}{}{}
 
 % todo review location
 % \hugeQuote{JJ_WORK}{Take a canvas}{. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
@@ -114,15 +117,14 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 % todo review for location. 
 %\hugeQuote{SL_FAIL}{We give up not simply because events are difficult, but because we hadn’t expected them to be so.}{School of Life}{}{notes on how to keep going\llink{http://www.thebookoflife.org/how-knowledge-of-difficulties-lends-confidence/}}
 
-\HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work.}{Chuck Close}{}{}
+\cleartorightpage
+\HugeQuote{CC_WORK}{Inspiration is for amateurs}{; the rest of us just show up and get to work.}{Chuck Close}{}{}
 
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline \say{I will try again tomorrow.}}{Mary Anne Radmach}{CP_FAIL}{}
 
 \hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong.}{Marcus Aurelius}{}{}
-
-\HugeQuote{LT_ENDURE}{Don't cling to your body's woes}{.\newline
-Then you can learn endurance.}{Lao Tzu}{}
-
+\cleartorightpage
+\HugeQuote{LT_ENDURE}{Don't cling to your body's woes}{. Then you can learn endurance.}{Lao Tzu}{}
 
 \cleartoleftpage
 \hugeQuote{H_CHANGE}{Change is the only constant in life.}{}{Heraclitus}{}{}
