--- a/HumilityIntro.tex
+++ b/HumilityIntro.tex
@@ -1,11 +1,11 @@
 \cleartorightpage
 {\small
 
-We can't bear listening to empty claims and boasting, it's infuriating especially when people seem to be eating up the inflated claims. At times we fall foul of this behaviour ourselves, acting as though there's nothing we can learn from those around us, acting as though we have it all figured out, acting as though we know it all. No matter how masterful we are in a given area, we can be sure that there are those more accomplished than us and those who are less accomplished. In either case we should be ready to listen to them as they can both provide different and valuable view points to change our direction and improve our processes (\S \ref{MA_CHANGE}).
+Even as reasonable as we are, we can't bear listening to empty claims and boasting, it's infuriating especially when people seem to be eating up the inflated claims. At times we fall foul of this behaviour ourselves, acting as though there's nothing we can learn from those around us, acting as though we have it all figured out, acting as though we know it all. No matter how masterful we are in a given area, we can be sure that there are those more accomplished than us and those who are less accomplished. In either case we should be ready to listen to them as they can both provide different and valuable view points to change our direction and improve our processes (\S \ref{MA_CHANGE}).
 
-We're not immune to needing help, we need to recognise that there are those who have skills that we sorely lack and that asking for help is not a cause for embarrassment it's a chance for us to learn something new, patch our deficiencies and maybe build a new relationship. If we allow ego to stop us from admitting to ourselves that we need help we're doing ourselves a major disservice, we need to put that to one side and let the experts show us the way. Sometimes we'll be out of our depth and alone, in which case we know we need to do what's required to the best of our ability.
+We're not immune to needing help, we need to recognise that there are others with skills we sorely lack and that asking for help is not a cause for embarrassment it's a chance for us to learn something new, patch our deficiencies and maybe build a new relationship. If we allow ego to stop us from admitting to ourselves that we need help we're doing ourselves a major disservice, we need to put that to one side and let the experts show us the way. Sometimes we'll be out of our depth and alone, in which case we know we need to do what's required to the best of our ability.
 
-We're not immune to luck either, it's incredibly important to remember that the current situation is not just down to how awesome we are, that there's an element of fate involved too. We know that it's only truly our behaviour which is under our control and to act as though that's not the case is incredibly short sighted.
+We're not immune to luck either, it's incredibly important to remember that the current situation is not just down to us, that there's an element of fate involved too. We know that it's only truly our behaviour which is under our control and to act as though that's not the case is incredibly short sighted.
 
 If we can keep this in mind we'll be open to new ideas, we'll be more self aware and we'll chip away at our weaknesses.
 
