edit layout and other small correction from ch eight

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -15,7 +15,7 @@ From within it you will find endless oppourtunities that elude other people.}{Ro
 
 %failure
 \cleartoleftpage
-\smallQuote{LT_STEP}{The greatest things in the world much be accomplished by the samllest.}{Lao Tzu}{}
+% \smallQuote{LT_STEP}{The greatest things in the world much be accomplished by the samllest.}{Lao Tzu}{}
 
 \smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step.}{Ryan Holiday}{JP_STAND}
 
@@ -40,24 +40,24 @@ From within it you will find endless oppourtunities that elude other people.}{Ro
 \cleartorightpage
 
 \HugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
-Whatever.}{Danielle La Porte}{MA_DWH}{It's how you respond to it that counts.}
+Whatever.}{Danielle La Porte}{MA_DWH}{All that matters is how you respond.}
 
 %promotion
 \cleartoleftpage
+\smallQuote{EG_ASK}{He who demands little gets it.}{Ellen Glasgow}{}
+
 \smallQuote{AG_WORK}{Don't pretend you're not proud of your work.}{April Gornik}{C_BOAST}{}
 
 \smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain.}{Robert Greene}{}
 
-
 \cleartorightpage
 %todo review location
-\hugeQuote{EG_ASK}{He who demands litte}{ gets it.}{Ellen Glasgow}{}{}
 
 \hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
 
 \cleartoleftpage
-\hugeQuote{DLP_NYG}{You are not}{ your genes}{Danielle La Porte}{}{}
+\hugeQuote{DLP_NYG}{You are not}{ your genes.}{Danielle La Porte}{}{}
 \hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality.}{}{Les Brown}{}{}
 \cleartorightpage
-\HugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
+\HugeQuote{HM_DWW}{Don't water your weeds.}{}{Harvey Mackay}{}{}
 
