--- a/Generosity.tex
+++ b/Generosity.tex
@@ -4,11 +4,11 @@
 
 \smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
 
-\smallQuote{BT_GIVE}{Always give with remembering and receive without forgetting}{Brian Tracy}{S_DO}{}
+\smallQuote{BT_GIVE}{Always give without remembering and receive without forgetting.}{Brian Tracy}{S_DO}{}
 
-\smallQuote{MM_HATE}{Resentment is like taking poison and waiting for the other person to die}{Malachi McCourt}{TS_HHH}
+\smallQuote{MM_HATE}{Resentment is like taking poison and waiting for the other person to die.}{Malachi McCourt}{TS_HHH}
 
-\smallQuote{AL_JWWWB}{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
+\smallQuote{AL_JWWWB}{They are just what we would be in their situation.}{Abraham Lincoln}{}{} 
 
 \smallQuote{LT_SELF}{No self interest? Self is fulfulled.}{Lao Tzu}{}
 
@@ -17,7 +17,7 @@
 
 \cleartorightpage
 
-\HugeQuote{MA_TRUST}{Tell yourself this}{ the people I deal with today will be:
+\HugeQuote{MA_TRUST}{The people I deal with today will be}{:
 \begin{itemize}
 	\item meddling
 	\item ungrateful
@@ -25,17 +25,18 @@
 	\item dishonest
 	\item jealous
 	\item surly
-\end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
+\end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that but remember that you've been like that too from time to time.}
 
 %Roman playwright and poet Terence gave voice when he wrote: ‘I am human: nothing human is foreign to me’ 
+\cleartoleftpage
+\HugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
+Mine: to be patient and cheeerful with everyone (including them).}{Marcus Aurelius}{}{}
+\cleartorightpage
+\HugeQuote{LT_HATE}{People who are good}{, I treat well. People who are not good, I also treat well.}{Lao Tzu}{}{}
 
-\hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
-Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
-
-\hugeQuote{LT_HATE}{People who are good}{, I treat well. People who are not good, I also treat well.}{Lao Tzu}{}{}
-
+\cleartoleftpage
 \HugeQuote{S_DO}{Kindness gives birth to kindness.}{}{Seneca}{}{}
-
+\cleartorightpage
 \HugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
 
 %\hugeQuote{}{Be kind}{, everyone is fighting a hard battle.{John Watson}{}{} 
