--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -11,13 +11,13 @@
 
 	Look at what you have, the things you value most and think how much you'd crave them if you didn't have them.}{Marcus Aurelius}{}{}
 
-\hugeQuote{LT_SIMPLE}{Look at plain silk}{; hold uncarved wood. The self dindles; desires fade.}{Lao Tzu}{} % maybe gratitude
+\hugeQuote{LT_SIMPLE}{Look at plain silk}{; hold uncarved wood. The self dwindles; desires fade.}{Lao Tzu}{} % maybe gratitude
 
 %% Awe
 \cleartoleftpage
 \hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel.}{Ralph Waldo Emerson}{}{}
 
-\hugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued.}{Robert Greene}{RWE_STARS}{}
+\hugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare and dying talent but one that is still greatly valued.}{Robert Greene}{RWE_STARS}{}
 
 \cleartorightpage
 \HugeQuote{CP_SCAR}{It is so hard to forget pain}{ but it is harder to remember sweetness. There is no scar for happiness.}{Chuck Palaniuk}{}{} %possibly ref MR_WORK
