--- a/GratitudeIntro.tex
+++ b/GratitudeIntro.tex
@@ -1,11 +1,11 @@
 \cleartorightpage
 {\small
 
-Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be able to grab handfulls of gratitude from the air. We don't though, we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago. 
+Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be dripping with gratitude, we should be able to grab handfulls of it from the air. We don't though, we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago. 
 
-It's not just the things we have already that we take for granted, it's someone taking extra effort on our behalf or extending an unexpected generosity to us. We become so cyncical that we expect others to be on the make or we sniffily say that they're \say{just doing their job}.
+It's not just the things we have already that we take for granted, it's someone taking extra effort on our behalf or extending an unexpected generosity to us. We become so cyncical that we expect others are trying to con us or we sniffily say that they're \say{just doing their job}.
 
-If we can't rely on ourselves to be  grateful, we need a little help to remind us and correct our course.
+We can't trust ourselves to be  grateful at the right time, we need a little help to remind us and correct our course.
 
 The stoics offered a routine to make sure we appreciated the things we have and the people around us. They suggested that we occasionally take the time to imagine our life without our loved ones and our most treasured possessions (\S \ref{E_MORTAL}). By regularly putting ourselves through the loss of a limb or a loved one, we'll feel truly grateful when they are with you (or still connected to the rest of your body).
 
