small clean up in learning

--- a/Learning.tex
+++ b/Learning.tex
@@ -31,7 +31,7 @@
 
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleartorightpage
 \HugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,7 +64,7 @@ fewer conclusions.
 Trust a few.\newline
 Do wrong to none.}{William Shakespeare}{}
 %TODO: check w/maddie for wording 
-%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit (\S \ref{HT_CREDIT}).}
+\smallQuote{MI_TRUST}{You'll only get three mentors you can trust. Make sure you're paying attention so you don't miss them.}{Madalina Idomir}{} % HT_CREDIT
 
 
 %
