add new closing comments

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -3,7 +3,7 @@
 
 We’re not idiots. We know that time is desperately short, so taking the time to work on this project, to make this journey, must be important to us. Picking up this collection when we’re struggling for the right course of action or taking a step back to think about these qualities and how they relate to each other and our lives must have an important impact. That process must produce some important result. 
 
-But the notes here are not important, they won't stop tragedies, they won't make us perfect parents, partners or friends. They can't make the sun shine when we're at the beach. The words here are pointers and references to what we should be aiming at but they are just words, just ideas, but without giving them agency in the real world, without using them to shape our actions and responses they have no value. It is through us that they gain value, it is us who use the ideas and put them into practice. Without us this book has no way to do anything for us or those around us. 
+But the notes here are not important, they won't stop tragedies, they won't make us perfect parents, partners or friends. They can't make the sun shine when we're at the beach. The words here are pointers and references to what we should be aiming at but they are just words, just ideas, but without giving them agency in the real world, without using them to shape our actions and responses they have no value. It is through us that they gain value, it is us who use the ideas and put them into practice. Without us this book has no way to do anything for us or those around us. We've leant on some smart and insightful people over the last few pages but it's our actions which people will remember not whether we had a snappy line or two two hand, no-one will really care about that.
 
 Without continual practice of the qualities we've touched on here the notes here are truly are wasted on us they truly are nothing. 
 
