--- a/project.tex
+++ b/project.tex
@@ -1,9 +1,5 @@
 \documentclass{book}
-% perfect size would be the same as a pocket penguin
-%Product Dimensions: 11.1 x 0.9 x 18.1 cm
-%\usepackage[paperheight=18.1cm,paperwidth=11.1cm]{geometry}
-
-%but for practicality we'll go for A Format
+%For practicality we'll go for A Format
 \usepackage[paperheight=17.8cm,paperwidth=11.0cm]{geometry}
 
 \usepackage{tabularx}
@@ -32,18 +28,16 @@
 
 \begin{document}
 \maketitle{}
-% \tableofcontents
 
-% \part{Introduction}
-%\refstepcounter{chapter}
-\chapter{Introduction}
+\setcounter{chapter}{-1}
+
+\refstepcounter{chapter}
 \input{Introduction.tex}
 
 \cleartorightpage
 
 \HugeQuote{LT_GA}{Great achievement}{ seems unfinished but its use is continuous.}{Lao Tzu}{}{}
 
-% \part{Ourselves}
 \chapter{Action}
 \input{Action.tex}
 
@@ -65,7 +59,6 @@
 \chapter{Confidence}
 \input{Confidence.tex}
 
-% \part{Others}
 \chapter{Gratitude}
 \input{Gratitude.tex}
 
@@ -75,19 +68,10 @@
 \chapter{Leadership}
 \input{Leadership.tex}
 
-\chapter{Conclusion}
+\refstepcounter{chapter}
 \input{Conclusion}
 
-% \part{Notes}
-
 \refstepcounter{chapter}
-% \addcontentsline{toc}{chapter}{\protect \numberline{\thechapter}Bibliography}
-% \addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Bibliography}
-\input{Books}
-
-\refstepcounter{chapter}
-% \addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Index}
-
 \printindex
 
 \end{document}
