re-ordering learning chapter

--- a/Focus.tex
+++ b/Focus.tex
@@ -115,7 +115,9 @@ Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 \cleartoleftpage
 
-\HugeQuote{WT_WORK}{It sounds a bit square}{, but I've found that the chances of getting a good result are just so much higher when you spend at least eight hours a day on your work.}{Wolfgang Tillmans}{}{}
+\HugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \emph{On purpose.}}{G. K. Nielson}{LR_WORK}{}
+
+%\hugeQuote{WT_WORK}{It sounds a bit square}{, but I've found that the chances of getting a good result are just so much higher when you spend at least eight hours a day on your work.}{Wolfgang Tillmans}{}{}
 
 \cleartorightpage
 \HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
