--- a/Learning.tex
+++ b/Learning.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 \hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive.}{}{Robert Greene}{}{}
-\hugeQuote{TP_BOOK}{If I read a book}{and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{}{}
+\hugeQuote{TP_BOOK}{If I read a book}{ and get one good idea from that \$20, then I've gotten one of the greatest deals of all time.}{Tom Peters}{}{}
 \hugeQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{}{Benjamin Franklin}{}{}
 \hugeQuote{RH_LIVE}{Study as if you were going to live forever}{ but live as if you were going to die tomorrow.}{Edmund Rich}{}{}
 %Possibly much earlier though.
@@ -21,18 +21,19 @@
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% TODO is this more for leadership now ? 
 % \hugeQuote{H_ART}{The art lies in concealing the art.}{}{Horace}{}{} 
 % \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful.}{Michelangelo}{}{}
 % % \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
 
-\hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
-
-\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \emph{On purpose.}}{G. K. Nielson}{}{}
 
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\cleartorightpage
+
+\cleartoleftpage
 \HugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
+\cleartorightpage
+\HugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
@@ -59,12 +60,12 @@ fewer conclusions.
 %%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
-\smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
-\smallQuote{WS_TRUST}{Love all.\newline
+\hugeQuote{RG_TRUST}{Trust yourself}{ more and others less.}{Robert Greene}{}{}
+\hugeQuote{WS_TRUST}{Love all}{.\newline
 Trust a few.\newline
-Do wrong to none.}{William Shakespeare}{}
-%TODO: check w/maddie for wording 
-\smallQuote{MI_TRUST}{You'll only get three mentors you can trust. Make sure you're paying attention so you don't miss them.}{Madalina Idomir}{} % HT_CREDIT
+Do wrong to none.}{William Shakespeare}{}{}
+\cleartorightpage
+\HugeQuote{MI_TRUST}{You'll only get three mentors you can trust}{. Make sure you're paying attention so you don't miss them.}{Madalina G. Idomir}{HT_CREDIT}{}
 
 
 %
